Add scripts to split GUM

--- a/config.ini
+++ b/config.ini
@@ -5,19 +5,19 @@
 
 ; ************** BASIC SETTINGS (see settings.md) **************
 ;___GENERAL SETTINGS___
-input = sample/en_ewt-ud-dev.conllu
-output = sample/output.tsv
+input = sample/input/sl_ssj-ud-merged.conllu
+output = sample/output_2/ssj_all.tsv
 
 ;___TREE SPECIFICATIONS___
-node_type = upos
+node_type = form
 labeled = yes
-label_subtypes = no
+label_subtypes = yes
 fixed = yes
 
 ;___TREE RESTRICTIONS___
-size = 2-10000
-;head = upos=NOUN
-;ignored_labels = punct
+size = 2-100000
+;head = deprel=amod
+ignored_labels = punct|reparandum
 ;allowed_labels = nsubj|obj|obl
 
 ; ___SEARCH BY QUERY___
@@ -25,12 +25,12 @@ size = 2-10000
 
 ;___ADDITIONAL STATISTICS___
 node_info = yes
-association_measures = no
+association_measures = yes
 ;compare = sample/fr_gsd-ud-dev.conllu
 
 ;___VISUALISATION___
 example = no
-grew_match = no
+grew_match = yes
 depsearch = no
 
 ;___OUTPUT THRESHOLD___
