--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@
 ; ************** BASIC SETTINGS (see settings.md) **************
 ;___GENERAL SETTINGS___
 input = sample/input/sl_ssj-ud-merged.conllu
-output = sample/output_2/ssj_all.tsv
+output = sample/output_keyness/ssj_vs_gsd_amod.tsv
 
 ;___TREE SPECIFICATIONS___
 node_type = form
@@ -16,7 +16,7 @@ fixed = yes
 
 ;___TREE RESTRICTIONS___
 size = 2-100000
-;head = deprel=amod
+head = deprel=amod
 ignored_labels = punct|reparandum
 ;allowed_labels = nsubj|obj|obl
 
@@ -26,7 +26,7 @@ ignored_labels = punct|reparandum
 ;___ADDITIONAL STATISTICS___
 node_info = yes
 association_measures = yes
-;compare = sample/fr_gsd-ud-dev.conllu
+compare = sample/input/fr_gsd-ud-merged.conllu
 
 ;___VISUALISATION___
 example = no
